Bug 434532 - "Up" button should be greyed out when in root or top directory
Summary: "Up" button should be greyed out when in root or top directory
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.3
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2021-03-17 08:11 UTC by Mohammed Sameer
Modified: 2021-06-06 10:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments
filelight video (166.57 KB, video/mp4)
2021-03-17 08:11 UTC, Mohammed Sameer
Details
Initial view (103.34 KB, image/png)
2021-05-05 11:51 UTC, Mohammed Sameer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mohammed Sameer 2021-03-17 08:11:24 UTC
Created attachment 136772 [details]
filelight video

SUMMARY
"Up" button should be greyed out when in root or top directory.
Please see attached video.
STEPS TO REPRODUCE
1. open filelight
2. go to root (/) directory
3. click the "up" button

OBSERVED RESULT
"Up" button is not greyed out.

EXPECTED RESULT
"Up" button is greyed out.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-03-17 23:08:55 UTC
Confirmed. Should be an easy fix; good for someone who wants to get started with KDE code contribution.
Comment 2 hancerli 2021-04-26 06:30:22 UTC
Anyone working on this one? Otherwise I can take it.
Comment 3 Nate Graham 2021-04-26 11:03:55 UTC
Go ahead!
Comment 4 Bug Janitor Service 2021-04-27 20:26:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/16
Comment 5 Nate Graham 2021-04-29 15:15:10 UTC
Git commit 4282289d61f3b3c416ed6dffa76518144a3aec5b by Nate Graham, on behalf of Burak Hancerli.
Committed on 29/04/2021 at 15:15.
Pushed by ngraham into branch 'master'.

Fix a small issue related with "Up" button

Up button was staying on "Enabled" state even if the user is on the "/"
path.

M  +1    -2    misc/filelightui.rc
M  +1    -0    src/mainWindow.cpp

https://invent.kde.org/utilities/filelight/commit/4282289d61f3b3c416ed6dffa76518144a3aec5b
Comment 6 Mohammed Sameer 2021-05-05 11:50:34 UTC
Hi,
I am not sure if this is correct, I think I have mistakenly reported that the bug is "Up" button is not greyed out when in root directory.
But I think the "Up" button was meant for going back to "Initial view"(please see attached screenshot) & it is not working, because if we go to the "pie chart view", currently there is no way to go back to the "Initial view" other than reopening the filelight app.
Could this be fixed here or submit a new bug report?
Comment 7 Mohammed Sameer 2021-05-05 11:51:44 UTC
Created attachment 138164 [details]
Initial view
Comment 8 hancerli 2021-05-05 18:55:02 UTC
(In reply to Mohammed Sameer from comment #6)
> Hi,
> I am not sure if this is correct, I think I have mistakenly reported that
> the bug is "Up" button is not greyed out when in root directory.
> But I think the "Up" button was meant for going back to "Initial
> view"(please see attached screenshot) & it is not working, because if we go
> to the "pie chart view", currently there is no way to go back to the
> "Initial view" other than reopening the filelight app.
> Could this be fixed here or submit a new bug report?

Hi Mohammed,
I'd like to work on this as well, but one of the maintainers should respond to clarify if this is intentional or a design flaw.

IMHO, either way, it needs a new ticket.
Comment 9 Mohammed Sameer 2021-06-05 08:27:28 UTC
Hi, submitted new bug report here:

https://bugs.kde.org/show_bug.cgi?id=438107
Comment 10 hancerli 2021-06-06 10:02:05 UTC
Thanks!