Fix a small issue related with "Up" button

Up button was staying on "Enabled" state even if the user is on the "/"
path.

BUG: 434532